Fixing failed specs

--- a/app/views/inventories/_form.html.slim
+++ b/app/views/inventories/_form.html.slim
@@ -5,7 +5,7 @@
   .form-inputs
     = f.association :item_category
     = f.association :item_type
-    = f.association :item_sub_type
+    = f.association :item_subtype
     = f.association :item_unit
     = f.input :quantity
     = f.association :area
