--- a/app/views/inventories/index.html.slim
+++ b/app/views/inventories/index.html.slim
@@ -28,7 +28,7 @@ table
       tr
         td = inventory.item_category
         td = inventory.item_type
-        td = inventory.item_sub_type
+        td = inventory.item_subtype
         td = inventory.item_unit
         td = inventory.quantity
         td = inventory.area
