--- a/app/views/required_items/_form.html.slim
+++ b/app/views/required_items/_form.html.slim
@@ -6,7 +6,7 @@
     = f.association :requirement
     = f.association :item_category
     = f.association :item_type
-    = f.association :item_sub_type
+    = f.association :item_subtype
     = f.association :item_unit
     = f.association :item_condition
     = f.input :quantity_requested
