--- a/app/views/required_items/index.html.slim
+++ b/app/views/required_items/index.html.slim
@@ -24,7 +24,7 @@ table
         td = required_item.requirement
         td = required_item.item_category
         td = required_item.item_type
-        td = required_item.item_sub_type
+        td = required_item.item_subtype
         td = required_item.item_unit
         td = required_item.item_condition
         td = required_item.quantity_requested
