--- a/app/views/required_items/show.html.slim
+++ b/app/views/required_items/show.html.slim
@@ -11,7 +11,7 @@ p
   = @required_item.item_type
 p
   strong Item sub type:
-  = @required_item.item_sub_type
+  = @required_item.item_subtype
 p
   strong Item unit:
   = @required_item.item_unit
