--- a/app/views/shipped_items/_form.html.slim
+++ b/app/views/shipped_items/_form.html.slim
@@ -6,12 +6,12 @@
     = f.association :requirement
     = f.association :item_category
     = f.association :item_type
-    = f.association :item_sub_type
+    = f.association :item_subtype
     = f.association :item_unit
     = f.input :quantity
     = f.input :remark
     = f.association :source
-    = f.input :destination
+    = f.association :destination
     = f.association :relief_camp
     = f.input :mode_of_transport
     = f.association :current_location
