--- a/app/views/shipped_items/index.html.slim
+++ b/app/views/shipped_items/index.html.slim
@@ -25,7 +25,7 @@ table
         td = shipped_item.requirement
         td = shipped_item.item_category
         td = shipped_item.item_type
-        td = shipped_item.item_sub_type
+        td = shipped_item.item_subtype
         td = shipped_item.item_unit
         td = shipped_item.quantity
         td = shipped_item.remark
