--- a/app/views/shipped_items/show.html.slim
+++ b/app/views/shipped_items/show.html.slim
@@ -10,8 +10,8 @@ p
   strong Item type:
   = @shipped_item.item_type
 p
-  strong Item sub type:
-  = @shipped_item.item_sub_type
+  strong Item subtype:
+  = @shipped_item.item_subtype
 p
   strong Item unit:
   = @shipped_item.item_unit
