--- a/app/views/inventories/show.html.slim
+++ b/app/views/inventories/show.html.slim
@@ -8,7 +8,7 @@ p
   = @inventory.item_type
 p
   strong Item sub type:
-  = @inventory.item_sub_type
+  = @inventory.item_subtype
 p
   strong Item unit:
   = @inventory.item_unit
