--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,7 @@ $primary-color: color("green", "lighten-2") !default;
 $secondary-color: color("blue", "base") !default;
 @import 'materialize';
 
+/*
 @import "bootstrap-datepicker3";
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -22,3 +23,4 @@ table {
 .chosen-search-input {
   height: 30px !important;
 }
+*/
