--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -9,7 +9,9 @@ html
     = javascript_include_tag 'application'
 
   body
-    = yield
+    .row
+      .col.s12.l8.offset-l2
+        = yield
     javascript:
       document.addEventListener('DOMContentLoaded', function() {
         M.AutoInit();
