--- a/app/views/inventories/_form.html.slim
+++ b/app/views/inventories/_form.html.slim
@@ -18,7 +18,7 @@
     = f.input :volunteer_id
     = f.input :contact_number
     = f.input :contact_name
-    = f.input :available_from
+    = f.input :available_from, input_html: {class: 'datepicker'}
 
   .form-actions
     = f.button :submit
