Add Goods Commitment create view

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,25 +2,552 @@
 $primary-color: color("green", "lighten-2") !default;
 $secondary-color: color("blue", "base") !default;
 @import 'materialize';
-
+@import "chosen";
 /*
 @import "bootstrap-datepicker3";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "chosen";
-
-table {
-  @extend .table;
-  @extend .table-bordered;
-  @extend .table-striped;
-  @extend .table-hover;
-}
+*/
 
 .chosen-single {
   height: 34px !important;
 }
 
+.chosen-container{
+  width: 100% !important;
+  margin-top: 10px;
+}
+
 .chosen-search-input {
   height: 30px !important;
 }
-*/
+
+//-----------------OVERRIDES------------//
+.input-field {
+  width: 100% !important;
+}
+
+.white {
+  color: white;
+}
+//------------------------ common used mixin ----------------------
+
+@mixin create-box($height, $width) {
+  height: $height !important;
+  width: $width !important;
+}
+
+//------------------------- MIXINS for padding --------------------
+
+@mixin lr-padding($padding) {
+  padding-left: $padding !important;
+  padding-right: $padding !important;
+}
+
+@mixin tb-padding($padding) {
+  padding-top: $padding !important;
+  padding-bottom: $padding !important;
+}
+
+//------------------------- MIXINS for margin ----------------------
+
+@mixin lr-margin($margin) {
+  margin-left: $margin !important;
+  margin-right: $margin !important;
+}
+
+@mixin tb-margin($margin) {
+  margin-top: $margin !important;
+  margin-bottom: $margin !important;
+}
+
+
+/*---------------------- COMMON FLEX CLASSES --------------------- */
+
+.no-wrap {
+  white-space: nowrap;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-wrap-reverse {
+  flex-wrap: wrap-reverse;
+}
+
+.flex-row {
+  display: flex !important;
+  flex-direction: row;
+}
+
+.flex-column {
+  display: flex !important;
+  flex-direction: column;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-cr { //flex-column-reverse
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.flex-ac { //flex-align-center
+  align-items: center;
+}
+
+.flex-jc { //flex-justify-center
+  justify-content: center;
+}
+
+.flex-jsb { //flex-justify-space-between
+  justify-content: space-between;
+}
+
+.flex-jsa { //flex-justify-space-around
+  justify-content: space-around;
+}
+
+.flex-jfe { //flex-justify-flex-end
+  justify-content: flex-end;
+}
+
+.full-flex {
+  flex: 1;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+/*---------------------- COMMON PADDING CLASSES----------------------*/
+//pad -> padding
+//l -> left
+//r -> right
+//t -> top
+//b -> bottom
+
+.is-no-pad { //no-padding
+  padding: 0px !important;
+}
+
+.is-no-lr-pad { //no-left-right-padding
+  @include lr-padding(0px);
+}
+
+.is-no-tb-pad { //no-top-bottom-padding
+  @include tb-padding(0px);
+}
+
+.is-no-l-pad { //no-left-padding
+  padding-left: 0px !important;
+}
+
+.is-no-r-pad { //no-right-padding
+  padding-right: 0px !important;
+}
+
+.is-no-t-pad { //no-top-padding
+  padding-top: 0px !important;
+}
+
+.is-no-b-pad { //no-bottom-padding
+  padding-bottom: 0px !important;
+}
+
+//---------------- padding-X -------------------
+
+.pad-3 {
+  padding: 3px !important;
+}
+
+.pad-5 {
+  padding: 5px !important;
+}
+
+.pad-10 {
+  padding: 10px !important;
+}
+
+.pad-15 {
+  padding: 15px !important;
+}
+
+.pad-20 {
+  padding: 20px !important;
+}
+
+.pad-30 {
+  padding: 30px !important;
+}
+
+//---------------- left-right-padding-X -------------------
+
+.lr-pad-5 {
+  @include lr-padding(5px);
+}
+
+.lr-pad-10 {
+  @include lr-padding(10px);
+}
+
+.lr-pad-15 {
+  @include lr-padding(15px);
+}
+
+.lr-pad-20 {
+  @include lr-padding(20px);
+}
+
+.lr-pad-30 {
+  @include lr-padding(30px);
+}
+
+//---------------- top-bottom-padding-X --------------------
+.tb-pad-5 {
+  @include tb-padding(5px);
+}
+
+.tb-pad-10 {
+  @include tb-padding(10px);
+}
+
+.tb-pad-15 {
+  @include tb-padding(15px);
+}
+
+.tb-pad-20 {
+  @include tb-padding(20px);
+}
+
+.tb-pad-30 {
+  @include tb-padding(30px);
+}
+
+//----------------- left-padding-X -------------------
+
+.l-pad-5 {
+  padding-left: 5px;
+}
+
+.l-pad-10 {
+  padding-left: 10px;
+}
+
+.l-pad-15 {
+  padding-left: 15px;
+}
+
+.l-pad-20 {
+  padding-left: 20px;
+}
+
+.l-pad-30 {
+  padding-left: 30px;
+}
+
+.l-pad-40 {
+  padding-left: 40px;
+}
+
+.l-pad-50 {
+  padding-left: 50px;
+}
+
+//----------------- right-padding-X -------------------
+.r-pad-5 {
+  padding-right: 5px;
+}
+
+.r-pad-10 {
+  padding-right: 10px;
+}
+
+.r-pad-15 {
+  padding-right: 15px;
+}
+
+.r-pad-20 {
+  padding-right: 20px;
+}
+
+.r-pad-30 {
+  padding-right: 30px;
+}
+
+.r-pad-40 {
+  padding-right: 40px;
+}
+
+.r-pad-50 {
+  padding-right: 50px;
+}
+
+//----------------- top-padding-X -------------------
+
+.t-pad-5 {
+  padding-top: 5px;
+}
+
+.t-pad-10 {
+  padding-top: 10px;
+}
+
+.t-pad-15 {
+  padding-top: 15px;
+}
+
+.t-pad-20 {
+  padding-top: 20px;
+}
+
+.t-pad-30 {
+  padding-top: 30px;
+}
+
+.t-pad-40 {
+  padding-top: 40px;
+}
+
+.t-pad-50 {
+  padding-top: 50px;
+}
+
+//----------------- bottom-padding-X -------------------
+.b-pad-5 {
+  padding-bottom: 5px !important;
+}
+
+.b-pad-10 {
+  padding-bottom: 10px;
+}
+
+.b-pad-20 {
+  padding-bottom: 20px;
+}
+
+.b-pad-30 {
+  padding-bottom: 30px;
+}
+
+.b-pad-40 {
+  padding-bottom: 40px;
+}
+
+.b-pad-50 {
+  padding-bottom: 50px;
+}
+
+/*---------------------------- COMMON MARGIN CLASSES-----------------------------*/
+//mrgn -> margin
+//l -> left
+//r -> right
+//t -> top
+//b -> bottom
+
+.mrgn-5 {
+  margin: 5px !important;
+}
+
+.mrgn-10 {
+  margin: 10px !important;
+}
+
+.mrgn-15 {
+  margin: 15px5 !important;
+}
+
+.is-no-mrgn { //no-margin
+  margin: 0px !important;
+}
+
+.is-no-lr-mrgn { //no-left-right-margin
+  @include lr-margin(0px);
+}
+
+.is-no-tb-mrgn { //no-top-bottom-margin
+  @include tb-margin(0px);
+}
+
+.is-no-l-mrgn { //no-left-margin
+  margin-left: 0px !important;
+}
+
+.is-no-r-mrgn { //no-right-margin
+  margin-right: 0px !important;
+}
+
+.is-no-t-mrgn { //no-top-margin
+  margin-top: 0px !important;
+}
+
+.is-no-b-mrgn { //no-bottom-margin
+  margin-bottom: 0px !important;
+}
+
+//---------------- left-right-margin-X -------------------
+
+.lr-mrgn-5 {
+  @include lr-margin(5px);
+}
+
+.lr-mrgn-10 {
+  @include lr-margin(10px);
+}
+
+.lr-mrgn-15 {
+  @include lr-margin(15px);
+}
+
+.lr-mrgn-20 {
+  @include lr-margin(20px);
+}
+
+.lr-mrgn-30 {
+  @include lr-margin(30px);
+}
+
+//---------------- top-bottom-margin-X --------------------
+.tb-mrgn-5 {
+  @include tb-margin(5px);
+}
+
+.tb-mrgn-10 {
+  @include tb-margin(10px);
+}
+
+.tb-mrgn-15 {
+  @include tb-margin(15px);
+}
+
+.tb-mrgn-20 {
+  @include tb-margin(20px);
+}
+
+.tb-mrgn-30 {
+  @include tb-margin(25px);
+}
+
+//------------------- left-margin-X ---------------------
+
+.l-mrgn-5 {
+  margin-left: 5px !important;
+}
+
+.l-mrgn-10 {
+  margin-left: 10px;
+}
+
+.l-mrgn-15 {
+  margin-left: 15px;
+}
+
+.l-mrgn-20 {
+  margin-left: 20px;
+}
+
+.l-mrgn-30 {
+  margin-left: 30px;
+}
+
+.l-mrgn-40 {
+  margin-left: 40px;
+}
+
+.l-mrgn-50 {
+  margin-left: 50px;
+}
+
+//-------------------- right-margin-X ---------------------
+
+.r-mrgn-5 {
+  margin-right: 5px;
+}
+
+.r-mrgn-10 {
+  margin-right: 10px;
+}
+
+.r-mrgn-20 {
+  margin-right: 20px;
+}
+
+.r-mrgn-30 {
+  margin-right: 30px;
+}
+
+.r-mrgn-40 {
+  margin-right: 40px;
+}
+
+.r-mrgn-50 {
+  margin-right: 50px;
+}
+
+//----------------------- top-margin-X ----------------------
+
+.t-mrgn-5 {
+  margin-top: 5px;
+}
+
+.t-mrgn-10 {
+  margin-top: 10px;
+}
+
+.t-mrgn-15 {
+  margin-top: 15px;
+}
+
+.t-mrgn-20 {
+  margin-top: 20px;
+}
+
+.t-mrgn-30 {
+  margin-top: 30px;
+}
+
+.t-mrgn-40 {
+  margin-top: 40px;
+}
+
+.t-mrgn-50 {
+  margin-top: 50px;
+}
+
+//------------------------- bottom-margin-X -----------------------
+.b-mrgn-5 {
+  margin-bottom: 5px;
+}
+
+.b-mrgn-10 {
+  margin-bottom: 10px;
+}
+
+.b-mrgn-15 {
+  margin-bottom: 15px;
+}
+
+.b-mrgn-20 {
+  margin-bottom: 20px;
+}
+
+.b-mrgn-30 {
+  margin-bottom: 30px;
+}
+
+.b-mrgn-40 {
+  margin-bottom: 40px;
+}
+
+.b-mrgn-50 {
+  margin-bottom: 50px;
+}
