--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -15,4 +15,5 @@ html
     javascript:
       document.addEventListener('DOMContentLoaded', function() {
         M.AutoInit();
-      })
+      });
+    script type = "text/javascript" src = "http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"
