--- a/app/views/goods_commitments/_form.html.slim
+++ b/app/views/goods_commitments/_form.html.slim
@@ -4,25 +4,25 @@
 
   .div class="col m12"
     .form-inputs
-      .div class="col m4"
+      .div class="col m4 s12"
         = f.input :name
-      .div class="col m4"
+      .div class="col m4 s12"
         = f.input :email
-      .div class="col m4"
+      .div class="col m4 s12"
         = f.input :phone_number
-      .div class="row col m4"
+      .div class="row col m4 s12"
         = f.input :available_from, input_html: {class: 'datepicker'}
-      .div class="col m4"
+      .div class="col m4 s12"
         = render partial: "layouts/location", locals:{ loc:f }
 
-    .div class="col m12 t-mrgn-10"
+    .div class="col m12 t-mrgn-10 s12"
       h5 INVENTORY DETAILS
     = f.simple_fields_for :inventories do |inventory|
       = render 'inventory_fields', f: inventory
-    .div class="col m12"
+    .div class="col m12 s12"
       .links class="button btn btn-primary white"
         = link_to_add_association 'Add Item', f, :inventories
 
-    .div class="row col m12 center tb-mrgn-10"
+    .div class="row col m12 center tb-mrgn-10 s12"
       .form-actions
         = f.button :submit, label: "SUBMIT"
