--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,6 +31,17 @@ $secondary-color: color("blue", "base") !default;
 .white {
   color: white;
 }
+
+.searchButton input {
+  text-decoration: none;
+  color: #fff;
+  background-color: #2196F3;
+  text-align: center;
+  letter-spacing: .5px;
+  transition: background-color .2s ease-out;
+  cursor: pointer;
+  padding: 10px;
+}
 //------------------------ common used mixin ----------------------
 
 @mixin create-box($height, $width) {
