--- a/app/views/relief_camps/index.html.slim
+++ b/app/views/relief_camps/index.html.slim
@@ -1,10 +1,24 @@
 .div class="col m12 center tb-mrgn-20"
   h5 RELIEF CAMPS
 
-table
+.div class="col m12 s12 tb-mrgn-20"
+  = form_tag(relief_camps_path, method: :get) do
+    .div class="col m3 s12"
+      = text_field_tag(:search, params[:search], placeholder: "Search")
+    .div class="col m3 s12"
+      = select_tag(:district_id, options_from_collection_for_select(District.all, :id, :name),
+              prompt: "Select District")
+    .div class="col m3 s12"
+      = select_tag(:area_id, options_from_collection_for_select(Area.all, :id, :name),
+              prompt: "Select Area")
+    .div class="col m3 s12 searchButton" style="float:right"
+      = submit_tag("Search")
+
+table class="t-mrgn-20"
   thead
     tr
       th Name
+      th District
       th
       th
       th
