Added join model + admin interface to assign users to camps

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -9,6 +9,7 @@
 
 // Active Admin's got SASS!
 @import "active_admin/mixins";
+@import "active_admin/select2/base";
 @import "active_material";
 
 // Overriding any non-variable SASS must be done after the fact.
