Add google api key as env variable (#21)

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -16,4 +16,4 @@ html
       document.addEventListener('DOMContentLoaded', function() {
         M.AutoInit();
       });
-    script type = "text/javascript" src = "https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"
+    script type = "text/javascript" src = "https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&key=#{ENV['GOOGLE_API_KEY']}"
